Bug 379155 - Imap resources crash when trying to open settings
Summary: Imap resources crash when trying to open settings
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Mollekopf
URL:
Keywords:
: 379548 379733 379911 379996 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-24 10:08 UTC by Christophe Marin
Modified: 2017-06-13 18:45 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe Marin 2017-04-24 10:08:44 UTC
Happens on any imap resource.

#0  MailTransport::ServerTest::normalProtocols (this=0x0) at /kde/src/5/kmailtransport/src/kmailtransport/servertest.cpp:593
#1  0x000000000042d5f6 in SetupServer::slotSafetyChanged (this=0x1b8a2e0)
    at /kde/src/5/kdepim-runtime/resources/imap/setupserver.cpp:616
#2  0x000000000042e207 in SetupServer::slotTestChanged (this=0x1b8a2e0)
    at /kde/src/5/kdepim-runtime/resources/imap/setupserver.cpp:570
#3  0x000000000044063e in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (SetupServer::*)()>::call(void (SetupServer::*)(), SetupServer*, void**) (
    f=(void (SetupServer::*)(SetupServer * const)) 0x42e1c0 <SetupServer::slotTestChanged()>, o=0x1b8a2e0, arg=0x7ffded2f7320)
    at /usr/include/qt5/QtCore/qobjectdefs_impl.h:143
#4  0x00000000004405b3 in QtPrivate::FunctionPointer<void (SetupServer::*)()>::call<QtPrivate::List<>, void>(void (SetupServer::*)(), SetupServer*, void**) (f=(void (SetupServer::*)(SetupServer * const)) 0x42e1c0 <SetupServer::slotTestChanged()>, o=0x1b8a2e0, 
    arg=0x7ffded2f7320) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:162
#5  0x00000000004404d6 in QtPrivate::QSlotObject<void (SetupServer::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x1dbeda0, r=0x1b8a2e0, a=0x7ffded2f7320, ret=0x0)
Comment 1 Laurent Montel 2017-04-24 10:33:20 UTC
Git commit d6a6f6e41cebc4545bfcfe122db76850054ea924 by Montel Laurent.
Committed on 24/04/2017 at 10:33.
Pushed by mlaurent into branch 'master'.

Fix Bug 379155 - Imap resources crash when trying to open settings

M  +2    -2    resources/imap/setupserver.cpp

https://commits.kde.org/kdepim-runtime/d6a6f6e41cebc4545bfcfe122db76850054ea924
Comment 2 Antonio Rojas 2017-05-12 06:31:39 UTC
*** Bug 379733 has been marked as a duplicate of this bug. ***
Comment 3 Antonio Rojas 2017-05-12 06:32:10 UTC
Can this please be backported to 17.04? It's a critical bug fix
Comment 4 Christophe Marin 2017-05-12 06:54:19 UTC
Not yet. now the imap resource crashes if the server is a GMail one :)

#3  0x00007fb2cbcb314e in qt_assert(char const*, char const*, int) () from /usr/lib64/libQt5Core.so.5
#4  0x000000000043154f in setCurrentAuthMode (authCombo=0x1f698f0, authtype=MailTransport::TransportBase::EnumAuthenticationType::XOAUTH2)
    at /kde/src/5/kdepim-runtime/resources/imap/setupserver.cpp:105
#5  0x000000000042f734 in SetupServer::readSettings (this=0x1cca450) at /kde/src/5/kdepim-runtime/resources/imap/setupserver.cpp:400
#6  0x000000000042b3e6 in SetupServer::SetupServer (this=0x1cca450, parentResource=0x1a77830, parent=111149279) at /kde/src/5/kdepim-runtime/resources/imap/setupserver.cpp:190
#7  0x00000000004224db in ImapResource::createConfigureDialog (this=0x1a77830, windowId=111149279) at /kde/src/5/kdepim-runtime/resources/imap/imapresource.cpp:75
#8  0x000000000044ef66 in ImapResourceBase::configure (this=0x1a77830, windowId=111149279) at /kde/src/5/kdepim-runtime/resources/imap/imapresourcebase.cpp:223
#9  0x00007fb2ce301c4f in Akonadi__ControlAdaptor::configure (this=0x1a76610, windowId=111149279) at /kde/build/5/akonadiserver/src/agentbase/controladaptor.cpp:51
#10 0x00007fb2ce301d62 in Akonadi__ControlAdaptor::qt_static_metacall (_o=0x1a76610, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7ffcc6385f70)
    at /kde/build/5/akonadiserver/src/agentbase/controladaptor.moc:121
#11 0x00007fb2ce302025 in Akonadi__ControlAdaptor::qt_metacall (this=0x1a76610, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7ffcc6385f70)
    at /kde/build/5/akonadiserver/src/agentbase/controladaptor.moc:172
Comment 5 Antonio Rojas 2017-05-12 07:02:28 UTC
(In reply to Christophe Giboudeaux from comment #4)
> Not yet. now the imap resource crashes if the server is a GMail one :)
> 

Should be fixed with https://phabricator.kde.org/D5819
Comment 6 Antonio Rojas 2017-05-12 14:59:47 UTC
Git commit e8b131fe179f474af9de12f1289ea70cd99e90e4 by Antonio Rojas.
Committed on 12/05/2017 at 14:56.
Pushed by arojas into branch 'Applications/17.04'.

Add missing include

Otherwise WITH_GMAIL_XOAUTH2 is always undefined
Differential Revision: https://phabricator.kde.org/D5819

M  +1    -0    resources/imap/setupserver.cpp

https://commits.kde.org/kdepim-runtime/e8b131fe179f474af9de12f1289ea70cd99e90e4
Comment 7 Christophe Marin 2017-05-22 10:38:36 UTC
Git commit 611510d0a005bc93102aa4b9f1a5b5f9905c4179 by Christophe Giboudeaux, on behalf of Montel Laurent.
Committed on 22/05/2017 at 10:37.
Pushed by cgiboudeaux into branch 'Applications/17.04'.

Fix Bug 379155 - Imap resources crash when trying to open settings

M  +2    -2    resources/imap/setupserver.cpp

https://commits.kde.org/kdepim-runtime/611510d0a005bc93102aa4b9f1a5b5f9905c4179
Comment 8 Wolfgang Bauer 2017-05-24 08:55:07 UTC
*** Bug 379996 has been marked as a duplicate of this bug. ***
Comment 9 Daniel Vrátil 2017-06-02 19:58:04 UTC
*** Bug 379548 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2017-06-02 21:38:14 UTC
Possible duplicate: bug 379792.
Comment 11 Christoph Feck 2017-06-13 18:45:16 UTC
*** Bug 379911 has been marked as a duplicate of this bug. ***