Fix Bug 379155 - Imap resources crash when trying to open settings

BUG: 379155